kubernetes/base/flasher/tusd/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tusd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tusd
  template:
    metadata:
      labels:
        app: tusd
    spec:
      containers:
        - image: tusd
          imagePullPolicy: IfNotPresent
          args: ["-base-path" ,"/tus/", "-behind-proxy", "-hooks-http", "http://nginx/api/admin/album-media-added", "-hooks-http-retry", "5", "-hooks-http-backoff", "2", "-hooks-enabled-events", "post-finish,pre-create", "-port=8080", "-max-size=20000000000", "-timeout=6000"]
          name: tusd
          ports:
            - name: tusd-web
              containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /
