kubernetes/base/flasher/tusd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tusd
  labels:
    app: tusd
    service: tusd
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
  selector:
    app: tusd
