kubernetes/base/flasher/tusd/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tusd-virtualservice
spec:
  hosts:
    - "api.jkanda.fr"
  gateways:
    - flasher-gateway
  http:
    - match:
        - uri:
            prefix: /tus/
      route:
        - destination:
            host: tusd
            port:
              number: 8080
      headers:
        response:
          add:
            Strict-Transport-Security: max-age=31536000; includeSubDomains
            X-Robots-Tag: "noindex, nofollow"
      corsPolicy:
        allowOrigins:
          - exact: https://jkanda.fr
          - exact: https://admin.jkanda.fr
          - exact: https://frontend.jkanda.fr
          - exact: http://localhost:3000
        allowHeaders:
          - authorization
          - content-type
          - cache-control
          - x-requested-with
          - tus-resumable
          - upload-length
          - upload-metadata
          - upload-offset
          # - upload-defer-length
          # - upload-metadata-directive
          # - upload-checksum
          # - upload-concat-checksum
          # - upload-concat-length
          # - upload-concat-path
          # - upload-concat-path-prefix
          # - upload-concat-mime-type
          # - upload-concat-algorithm
          # - upload-checksum-algorithm
          # - upload-checksum-value
          # - upload-offset
          # - upload-length
          # - upload-metadata-directive
        allowMethods:
          - OPTIONS
          - GET
          - POST
          - PATCH
          - DELETE
        allowCredentials: true
        #maxAge: "24h"  
    # - match:
    #     - uri:
    #         prefix: /metrics
    #   route:
    #     - destination:
    #         host: tusd
    #         port:
    #           number: 8080
